--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cryptography==41.0.7
 # Validation and serialization
 pydantic==2.5.0
 pydantic-settings==2.1.0
+email-validator==2.3.0
 
 # Security headers and middleware
 secure==0.3.0
