Update for GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
     
     - name: Run all tests
       run: |
-        python -m pytest tests/ -v --tb=short --cov=app --cov-report=xml
+        python -m pytest tests/ -v --tb=short --cov=app --cov-report=xml --cov-fail-under=65
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
