--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Run Safety check for known vulnerabilities
       run: |
         echo "Running Safety check..."
-        safety check --json --output safety-report.json || true
-        safety check
+        safety scan --json --output safety-report.json || true
+        safety scan
     
     - name: Run Semgrep security scan
       run: |
