--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ alembic==1.12.1
 # Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-cryptography==41.0.7
+python-multipart==0.0.18
+cryptography==42.0.5
 
 # Validation and serialization
 pydantic==2.5.0
@@ -25,8 +25,7 @@ secure==0.3.0
 slowapi==0.1.9
 
 # Templates and web interface
-jinja2==3.1.2
-python-multipart==0.0.6
+jinja2==3.1.6
 
 # Logging and monitoring
 structlog==23.2.0
@@ -34,10 +33,11 @@ structlog==23.2.0
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
 httpx==0.25.2
 
 # Development
-black==23.11.0
+black==24.3.0
 isort==5.12.0
 flake8==6.1.0
 mypy==1.7.1
