--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,17 +98,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install bandit safety
+        pip install bandit pip-audit
     
     - name: Run Bandit security scan
       run: |
         bandit -r app/ -f json -o bandit-report.json || true
         bandit -r app/ -ll
     
-    - name: Run Safety check
+    - name: Run pip-audit vulnerability scan
       run: |
-        safety check -r requirements.txt --save-json safety-report.json || true
-        safety check -r requirements.txt
+        pip-audit -r requirements.txt --format=json --output=pip-audit-report.json || true
+        pip-audit -r requirements.txt
     
     - name: Upload security reports
       uses: actions/upload-artifact@v4
@@ -116,7 +116,7 @@ jobs:
         name: security-reports
         path: |
           bandit-report.json
-          safety-report.json
+          pip-audit-report.json
 
   docker:
     runs-on: ubuntu-latest
