--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -11,56 +11,56 @@ on:
 jobs:
   security-scan:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.12'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install bandit safety semgrep
-    
+        pip install bandit pip-audit semgrep
+
     - name: Run Bandit security scan
       run: |
         echo "Running Bandit security scan..."
         bandit -r app/ -f json -o bandit-report.json || true
         bandit -r app/ -ll
-    
-    - name: Run Safety check for known vulnerabilities
+
+    - name: Run pip-audit vulnerability scan
       run: |
-        echo "Running Safety check..."
-        safety check -r requirements.txt --save-json safety-report.json || true
-        safety check -r requirements.txt
-    
+        echo "Running pip-audit vulnerability scan..."
+        pip-audit -r requirements.txt --format=json --output=pip-audit-report.json || true
+        pip-audit -r requirements.txt || true
+
     - name: Run Semgrep security scan
       run: |
         echo "Running Semgrep security scan..."
         semgrep --config=auto app/ --json --output=semgrep-report.json || true
         semgrep --config=auto app/
-    
+
     - name: Upload security reports
       uses: actions/upload-artifact@v4
       with:
         name: security-reports-${{ github.run_number }}
         path: |
           bandit-report.json
-          safety-report.json
+          pip-audit-report.json
           semgrep-report.json
 
   dependency-review:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
-    
+
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-    
+
     - name: Dependency Review
       uses: actions/dependency-review-action@v4
       with:
