--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,20 +128,12 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
+    - name: Build Docker image
       uses: docker/build-push-action@v5
       with:
         context: .
-        push: true
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/secure-python-web-api:latest
-          ${{ secrets.DOCKER_USERNAME }}/secure-python-web-api:${{ github.sha }}
+        push: false
+        tags: secure-python-web-api:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
