--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgresql://username:password@localhost:5432/secure_api_db
+DATABASE_URL=postgresql://username:password@localhost:5432/secure_api_db  # pragma: allowlist secret
 DATABASE_POOL_SIZE=10
 DATABASE_MAX_OVERFLOW=20
 
