--- a/alembic.ini
+++ b/alembic.ini
@@ -56,7 +56,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://username:password@localhost:5432/secure_api_db
+sqlalchemy.url = postgresql://username:password@localhost:5432/secure_api_db  # pragma: allowlist secret
 
 
 [post_write_hooks]
