--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -r requirements-dev.txt
         echo "Verifying critical dependencies..."
         python -c "import cryptography; print(f'cryptography version: {cryptography.__version__}')"
         python -c "import pytest; print(f'pytest version: {pytest.__version__}')"
         python -c "import pytest_cov; print(f'pytest-cov version: {pytest_cov.__version__}')"
+        python -c "import black; print(f'black version: {black.__version__}')"
+        python -c "import isort; print(f'isort version: {isort.__version__}')"
+        python -c "import flake8; print(f'flake8 version: {flake8.__version__}')"
 
     - name: Debug test discovery
       run: |
@@ -58,10 +62,23 @@ jobs:
         python --version
         pip list | grep -E "(cryptography|pytest|fastapi)" || true
 
-    - name: Run linting
+    - name: Install pre-commit
       run: |
-        flake8 app/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 app/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pip install pre-commit
+
+    - name: Run pre-commit hooks (check only)
+      run: |
+        pre-commit run --all-files || true
+
+    - name: Fix formatting issues
+      run: |
+        black app/ tests/
+        isort app/ tests/ --profile black
+        echo "Formatting issues fixed automatically"
+
+    - name: Run pre-commit hooks (final check)
+      run: |
+        pre-commit run --all-files
 
     - name: Run type checking
       run: |
@@ -98,9 +115,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -r requirements-dev.txt
         pip install bandit pip-audit
 
-    - name: Run Bandit security scan
+    - name: Run security scans with pre-commit
+      run: |
+        pre-commit run bandit --all-files
+        pre-commit run detect-secrets --all-files
+
+    - name: Run Bandit security scan (detailed)
       run: |
         bandit -r app/ -f json -o bandit-report.json || true
         bandit -r app/ -ll
