--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
     - name: Install pre-commit
       run: |
         pip install pre-commit
+        pre-commit clean
 
     - name: Run pre-commit hooks (check only)
       run: |
@@ -72,6 +73,7 @@ jobs:
 
     - name: Fix formatting issues
       run: |
+        pip install black==24.3.0 isort==5.12.0
         black app/ tests/
         isort app/ tests/ --profile black
         echo "Formatting issues fixed automatically"
