--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
     rev: v1.5.1
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports, --no-strict-optional, --explicit-package-bases]
+        args: [--config-file=config/mypy.ini, --ignore-missing-imports]
         exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
 
   - repo: https://github.com/PyCQA/bandit
