--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements/requirements.txt
         pip install bandit pip-audit semgrep
 
     - name: Run Bandit security scan
@@ -35,8 +35,8 @@ jobs:
     - name: Run pip-audit vulnerability scan
       run: |
         echo "Running pip-audit vulnerability scan..."
-        pip-audit -r requirements.txt --format=json --output=pip-audit-report.json || true
-        pip-audit -r requirements.txt || true
+        pip-audit -r requirements/requirements.txt --format=json --output=pip-audit-report.json || true
+        pip-audit -r requirements/requirements.txt || true
 
     - name: Run Semgrep security scan
       run: |
