--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,44 +3,44 @@ repos:
     rev: v4.4.0
     hooks:
       - id: trailing-whitespace
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
       - id: end-of-file-fixer
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
       - id: check-yaml
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: debug-statements
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
       - id: check-docstring-first
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
 
   - repo: https://github.com/psf/black
     rev: 24.3.0
     hooks:
       - id: black
         language_version: python3.12
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
         args: ["--profile", "black"]
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.0.0
     hooks:
       - id: flake8
         args: [--max-line-length=88, --max-complexity=15]
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.5.1
     hooks:
       - id: mypy
         args: [--config-file=config/mypy.ini, --ignore-missing-imports]
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.5
@@ -49,11 +49,11 @@ repos:
         additional_dependencies: [pbr]
         args: [-ll]
         files: ^app/.*\.py$
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
 
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.4.0
     hooks:
       - id: detect-secrets
         args: ['--exclude-files', 'tests/test_security.py']
-        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$
+        exclude: ^(debug_|test_|demo_|minimal_|simple_|direct_|endpoint_|registration_|password_|schema_).*\.py$|^tools/.*\.py$
