--- a/config/mypy.ini
+++ b/config/mypy.ini
@@ -44,3 +44,8 @@ ignore_errors = True
 
 [mypy-app.security_utils]
 ignore_errors = True
+
+[mypy-app.main]
+# Allow specific type ignore comments for exception handlers
+warn_unused_ignores = False
+ignore_errors = True
